# Hush

./: .gitignore  DATASETS.md  GITHUB_RELEASE_NOTES.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_test.py  setup.py
configs/: default.ini  run_config.json
data/: __init__.py  augmentation.py  dataset.py  fast_dataset.py  pregenerated_dataset.py  prepare_hdf5.md
data/manifests/: README.md  example_background.json  example_noise.json  example_rir.json  example_train.json
data/scripts/: build_rust_data_stack.sh  prepare_hdf5.sh  validate_hdf5_contract.sh
deployment/: README.md
deployment/examples/c/: denoise_frame_demo.c
deployment/examples/python/: denoise_ctypes.py  denoise_mic.py  denoise_stream.py  weya_nc.py
deployment/include/: weya_nc.h
docs/: architecture.md
evaluation/: __init__.py  evaluate.py
export/: __init__.py  onnx_export.py
model/: __init__.py  dfnet_se.py
scripts/: compute_objective_metrics.py  create_simple_demo_dataset.py  debug_training.py  download_rir.py  extract_manifest_paths.py  generate_training_data.py  infer_dfnet_batch.py  infer_single.py  inspect_generated_data.py  prepare_manifests.py  preview_augmentation.py  regression_interface_check.py  resume_download_dns4.sh  run_training.sh
training/: __init__.py  config.py  loss.py  lr.py  train.py
