[project]
name = "deepfilternet-se"
version = "0.1.0"
description = "DeepFilterNet-SE: Primary speaker extraction + denoising at 16kHz"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT OR Apache-2.0"}
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "soundfile>=0.12.0",
    "librosa>=0.9.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "loguru>=0.6.0",
    "h5py>=3.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "tensorboard>=2.10.0",
    "pesq>=0.0.4",
    "pystoi>=0.3.3",
]
export = [
    "onnx>=1.12.0",
    "onnxruntime>=1.12.0",
    "onnxsim>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.0.200",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "model*", "training*", "evaluation*", "export*"]
